--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,22 +9,24 @@
     tools:context=".LoginActivity">
 
     <EditText
-        android:id="@+id/loginUsername"
+        android:id="@+id/etLoginUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Username"
-        android:layout_margin="30dp" />
+        android:layout_margin="30dp"
+        android:hint="Username" />
 
     <EditText
-        android:id="@+id/loginPassword"
-        android:hint="Password"
+        android:id="@+id/etLoginPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp" />
+        android:layout_margin="30dp"
+        android:inputType="textPassword"
+        android:hint="Password" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"/>
+        android:layout_margin="30dp"
+        android:text="Login" />
 </LinearLayout>
